fixed white space issue in integrated courses [TUS-2623]

--- a/code/style/style.css
+++ b/code/style/style.css
@@ -1146,13 +1146,40 @@ a.rightHdrTxt {
  	margin-right:20px;
 }
 
-div#pageContent,
-div#pageContent div:first-child {
-	min-height: 320px;
+div#pageContent {
+	min-height: 420px;
+	padding: 5px 30px;
+	margin: 10px 30px 20px 125px;
+	background-color:#fff;
+	border-right:3px solid black;
+	border-bottom:3px solid black;
+	border-top:1px solid #CC3300;
+	border-left:2px solid #CC3300;
+	z-index:99;
 }
 
-div#pageContent table:last-child {
+div#pageContent .viewby {
+	padding: 10px 0px;
+}
+
+div#pageContent.justcontent {
+	margin: 20px;
+}
+
+.contentmeta {
 	padding-top: 30px;
+	font-size:10px;
+	width: 100%;
+	height: 100%;
+}
+
+.contentmeta td {
+	vertical-align: bottom;
+	height: 100%;
+}
+
+.contentmeta p {
+	margin: 0px;
 }
 
 /*
@@ -2366,6 +2393,10 @@ div.shortpage {
 body.searchpopup {
 	min-width: 625px;
 	min-height: 500px;
+}
+
+div#pageContent #loadingDiv {
+	min-height: auto;
 }
 
 /* end main content styles */
